--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,22 @@ html {
   color: white !important;
   border-radius: 10px !important;
 }
+
+/* global.css or your component CSS file */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  
+  100% {
+    opacity: 1;
+  }
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.fade-in {
+  animation: fadeIn 0.8s ease-in-out forwards;
+}
